--- a/index.html
+++ b/index.html
@@ -1,12 +1,164 @@
+Sure, here's the HTML content for "Mia's Birthday Bash" which is designed to be mobile-friendly:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Mia's Birthday Bash</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #e91e63;
+            text-align: center;
+        }
+        h2 {
+            color: #3f51b5;
+        }
+        .goal {
+            background-color: #f1f1f1;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+        .goal p {
+            margin: 5px 0;
+        }
+        .chat-announcement {
+            background-color: #ffeb3b;
+            padding: 10px;
+            margin: 20px 0;
+            border-radius: 5px;
+            text-align: center;
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 10px;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            h2 {
+                font-size: 18px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my web page hosted on GitHub Pages.</p>
+    <div class="container">
+        <h1>Mia's Birthday Bash</h1>
+        <h2>Social Media Announcement</h2>
+        <p><strong>Headline:</strong> "Mia's Birthday Bash: A Playful Night of Fun and Surprises!"</p>
+        <p><strong>Copy:</strong> "Join us for an unforgettable night as we celebrate Mia's Birthday Bash! 🎉 Get ready for a playful evening filled with exciting activities, naughty surprises, and plenty of chances to interact with Mia. Don't miss out on the fun – mark your calendars and get ready to party! 🎂✨"</p>
+
+        <h2>Manual for Mia's Birthday Bash</h2>
+        <p><strong>Room Theme:</strong> Mia's Birthday Bash</p>
+        <p><strong>Decorations:</strong> Bright and colorful balloons, streamers, and a "Happy Birthday" banner. Include a youthful and playful twist with items like pom-poms and party hats.</p>
+        <p><strong>Model's Outfit:</strong> Cheerleader or schoolgirl-themed lingerie to convey a young, playful, and legal look.</p>
+        <p><strong>Props:</strong> Pom-poms, a small cake, and party hats.</p>
+
+        <h2>Naughty Decoration Ideas</h2>
+        <ul>
+            <li>Balloon Bouquets: Arrange balloon bouquets around the room for a festive feel.</li>
+            <li>Birthday Banner: Hang a "Happy Birthday" banner in the background.</li>
+            <li>Pom-Poms: Use pom-poms for playful interactions and cheerleading routines.</li>
+            <li>Party Hats: Wear a party hat for a fun, festive touch.</li>
+            <li>Cake: Have a small birthday cake ready for cake play later in the show.</li>
+        </ul>
+
+        <h2>Goals and Token Amounts</h2>
+        <div class="goal">
+            <p><strong>1. Sexy Dance:</strong> 100 tokens</p>
+            <p>The model performs a sexy dance.</p>
+        </div>
+        <div class="goal">
+            <p><strong>2. Birthday Spankings:</strong> 150 tokens</p>
+            <p>The model gives herself playful birthday spankings, with the number corresponding to her age or a random number from the wheel.</p>
+        </div>
+        <div class="goal">
+            <p><strong>3. Gift Unwrapping:</strong> 200 tokens</p>
+            <p>The model unwraps herself, starting from a fully wrapped outfit to lingerie.</p>
+        </div>
+        <div class="goal">
+            <p><strong>4. Lingerie Change:</strong> 250 tokens</p>
+            <p>The model changes into a new, sexy piece of lingerie.</p>
+        </div>
+        <div class="goal">
+            <p><strong>5. Interactive Tease:</strong> 300 tokens</p>
+            <p>The model engages in a sensual tease, asking viewers what they'd like to see next (e.g., slow strip tease or sexy role play).</p>
+        </div>
+        <div class="goal">
+            <p><strong>6. Ice Cube Tease:</strong> 350 tokens</p>
+            <p>The model uses ice cubes to tease her body, creating a sensual experience.</p>
+        </div>
+        <div class="goal">
+            <p><strong>7. Intimate Play:</strong> 400 tokens</p>
+            <p>The model performs a more intimate and interactive activity (e.g., using a toy or engaging in a sexy role play).</p>
+        </div>
+        <div class="goal">
+            <p><strong>8. Birthday Oil Rub:</strong> 450 tokens</p>
+            <p>The model rubs scented or flavored oil on herself, making her skin glisten.</p>
+        </div>
+        <div class="goal">
+            <p><strong>9. Interactive Pleasure:</strong> 500 tokens</p>
+            <p>The model involves the audience in a more interactive pleasure session, taking suggestions or performing a specific sexy act.</p>
+        </div>
+        <div class="goal">
+            <p><strong>10. Birthday Candle Drip:</strong> 550 tokens</p>
+            <p>The model uses body-safe wax to drip warm wax sensually on her skin.</p>
+        </div>
+        <div class="goal">
+            <p><strong>11. Chocolate Body Paint:</strong> 600 tokens</p>
+            <p>The model uses edible chocolate body paint to create a sexy design on her body.</p>
+        </div>
+        <div class="goal">
+            <p><strong>12. Intimate Request:</strong> 700 tokens</p>
+            <p>The model fulfills a specific intimate request from the audience (within her comfort limits).</p>
+        </div>
+        <div class="goal">
+            <p><strong>13. Birthday Dance:</strong> 800 tokens</p>
+            <p>The model performs a sexy dance in a birthday-themed costume, eventually stripping down.</p>
+        </div>
+        <div class="goal">
+            <p><strong>14. Cake Play:</strong> 900 tokens</p>
+            <p>The model playfully smears cake or icing on herself in a sensual manner.</p>
+        </div>
+        <div class="goal">
+            <p><strong>15. Shower or Bubble Bath Pleasure Show:</strong> 1000 tokens</p>
+            <p>The model takes a full shower or bubble bath, engaging in a complete pleasure show, providing an immersive and intimate experience for the audience.</p>
+        </div>
+
+        <h2>Private Show Rate Change</h2>
+        <div class="chat-announcement">
+            🎉 Attention everyone! During Mia's Birthday Bash, private show rates are increased to 1000 tokens per minute to keep the party going strong for everyone! Enjoy the fun and interactive activities we've planned! 🎉
+        </div>
+
+        <h2>Tips for a Smooth and Successful Show</h2>
+        <ul>
+            <li><strong>Pre-Stream Announcement:</strong> Remind viewers of the upcoming birthday bash a few days in advance on all social media platforms.</li>
+            <li><strong>Engage with Viewers:</strong> Regularly interact with viewers in the public chat to keep them engaged and excited.</li>
+            <li><strong>Goal Reminders:</strong> Frequently remind viewers of the current goal and how close you are to achieving it.</li>
+            <li><strong>Top Tipper Prizes:</strong> Consider offering a small prize for the top tipper of each hour to encourage more tipping.</li>
+            <li><strong>Assistant Role:</strong> Have an assistant (Knight) monitor token counts and help with chat moderation.</li>
+            <li><strong>Post-Stream Thank You:</strong> After the stream, thank viewers on social media for their participation and support.</li>
+        </ul>
+    </div>
 </body>
 </html>
+```
+
+This HTML is designed to be responsive and mobile-friendly, ensuring it looks good on all devices. You can copy and paste this into an HTML file and use it to guide the cam model and her assistant for "Mia's Birthday Bash."
