Update some Pre-strem announcement reminders

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>Manual for Mia's Birthday Bash</h2>
         <p><strong>Room Theme:</strong> Mia's Birthday Bash</p>
         <p><strong>Decorations:</strong> Bright and colorful balloons, streamers, and a "Happy Birthday" banner. Include a youthful and playful twist with items like pom-poms and party hats.</p>
-        <p><strong>Model's Outfit:</strong> Cheerleader or schoolgirl-themed lingerie to convey a young, playful, and legal look.</p>
+        <p><strong>Model's Outfit:</strong> Cheerleader or schoolgirl-themed lingerie to convey a young, playful look.</p>
         <p><strong>Props:</strong> Pom-poms, a small cake, and party hats.</p>
 
         <h2>Naughty Decoration Ideas</h2>
@@ -148,8 +148,9 @@
             <h2>Tips for a Smooth and Successful Show</h2>
             <ul>
                 <li><strong>Pre-Stream Announcement:</strong> Remind viewers of the upcoming birthday bash a few days in advance on Instagram, Telegram, and your profile.</li>
+                <li><strong>Pre-Stream Announcement:</strong> Remind viewers during streams leading up to the party. Have Knights remind viewers as well</li>
                 <li><strong>Engage with Viewers:</strong> Regularly interact with viewers in the public chat to keep them engaged and excited.</li>
-                <li><strong>Goal Reminders:</strong> Frequently remind viewers of the current goal and how close you are to achieving it.</li>
+                <li><strong>Goal Reminders:</strong> Have Knights frequently remind viewers of the current goal and how close you are to achieving it.</li>
                 <li><strong>Top Tipper Prizes:</strong> Consider offering a small prize for the top tipper of each hour to encourage more tipping.</li>
                 <li><strong>Assistant Role:</strong> Have an assistant (Knight) monitor token counts and help with chat moderation.</li>
                 <li><strong>Post-Stream Thank You:</strong> After the stream, thank viewers on social media for their participation and support.</li>
